Use buttons for user rating and prevent flicker between images

--- a/src/app/components/MovieCard/userrating.module.css
+++ b/src/app/components/MovieCard/userrating.module.css
@@ -1,5 +1,17 @@
+
 .slot {
-  width: 28px; /* 31px; */
+  --rating-button-padding: 8px;
+  --rating-button-width: 24px;
+  cursor: pointer;
+  width: calc(var(--rating-button-width) + var(--rating-button-padding)); /* 31px; */
   height: 35px; /* 37px; */
   margin-right: 8px;
+  background: none;
+  background-repeat: no-repeat;
+  background-image: url("/popcorn_empty.svg");
+  border: 0;
+}
+
+.slotFilled {
+  background-image: url("/popcorn.svg");
 }
